# synchronised_media_playback

./: .gitignore  README.md  compile  follower.c  leader.c  meson.build  player.c  sync.c
